style: rename some variables, remove comments